@@ -840,25 +840,33 @@ java -jar dist/]]>@{name}<![CDATA[.jar [options]
 
 <!-- experimental RMI part -->
 <target name="rmi4ngs">
-    <mkdir dir="tmp"/>
-    <mkdir dir="dist"/>		   	   
-	<echo file="dist/rmi4ngs.server.policy">grant { permission java.security.AllPermission;};</echo>
+	<delete dir="dist/rmi4ngs.dir"/>
+    <mkdir dir="dist/rmi4ngs.dir"/>		
+       
+       	   
+	<echo file="dist/rmi4ngs.dir/server.policy">
+	grant codeBase "/home/lindenb/src/jvarkit-git/dist/rmi4ngs.dir/" { permission java.security.AllPermission;};
+	grant { permission java.security.AllPermission;};
+	</echo>
+
+   <javac destdir="dist/rmi4ngs.dir/" includeAntRuntime="false" debug="true">
+   		<src path="src/main/java"/>
+   		<classpath refid="picard.lib"/>
+   		<include name="**/rmi/server/NGSServiceImpl.java"/>
+   </javac>	
 	
-	<compile-with-picard 
-		java="**/NGSServiceImpl.java"
-		main="com.github.lindenb.jvarkit.tools.ws.rmi.server.NGSServiceImpl"
-		name="rmi4ngs"
-		/>
-		
+	<echo>Run RMIRegistry</echo>
 	<!--
 	 <exec executable="rmiregistry" spawn="true" failonerror="false">
 	 	 <arg value="-J-Djava.rmi.server.useCodebaseOnly=false"/>
      </exec>	
 		-->
 	<java classname="com.github.lindenb.jvarkit.tools.ws.rmi.server.NGSServiceImpl" fork="true">
-		<jvmarg value="-Djava.security.policy=dist/rmi4ngs.server.policy"/>
-		<jvmarg value="-Djava.rmserver.codebase=file:///home/lindenb/src/jvarkit-git/dist/rmi4ngs.jar"/>
-		<jvmarg value="-Dhttp.nonProxyHosts=192.168.1.1"/>
+		<jvmarg value="-Djava.security.manager"/>
+		<jvmarg value="-Djava.security.policy=/home/lindenb/src/jvarkit-git/dist/rmi4ngs.dir/server.policy"/>
+		<jvmarg value="-Djava.rmserver.codebase=file:///home/lindenb/src/jvarkit-git/dist/rmi4ngs.dir/"/>
+		<jvmarg value="-Djava.rmserver.hostname=localhost"/>
+		<jvmarg value="-Dhttp.nonProxyHosts=localhost"/>
 		<jvmarg value="-Djava.rmi.server.useCodebaseOnly=false"/>
 		<jvmarg value="-Djava.rmi.server.logCalls=true"/>
 		<jvmarg value="-Dsun.rmi.loader.logLevel=DEBUG"/>
@@ -866,7 +874,7 @@ java -jar dist/]]>@{name}<![CDATA[.jar [options]
 		<jvmarg value="-Dsun.rmi.server.logLevel=DEBUG"/>
 		<classpath>
 			<path refid="picard.lib"/>
-			<pathelement path="dist/rmi4ngs.jar"/>
+			<pathelement location="dist/rmi4ngs.dir/"/>
 		</classpath>
 		<arg value="CONFIG=/home/lindenb/jeter.xml"/>
 	</java>
